--- a/templates/testUtilisateur/index.html.twig
+++ b/templates/testUtilisateur/index.html.twig
@@ -10,7 +10,7 @@
     <body>
         {% block body %}{% endblock %}      
         <h2>Je m'appelle {{unevariable.v1}} {{unevariable.v2}}</h2>  
-                <button class="btn btn-danger">DROP THE BEATS</button>
+                <button class="btn btn-default">DROP THE BEATS</button>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
