--- a/templates/testUtilisateur/index.html.twig
+++ b/templates/testUtilisateur/index.html.twig
@@ -12,7 +12,7 @@
         <h1>hello</h1> 
         <br>
         <h1>Je m'appelle {{unevariable.v1}} {{unevariable.v2}}</h1>
-        <button type="button" class="btn btn-default">Primary</button>
+        <button type="button" class="btn btn-primary">Primary</button>
         {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
